# cgcs-ai-robotics

./: .gitignore  ARCHITECTURE.md  BOUNDARIES.md  CONTRIBUTING.md  DAVNA-COVENANT.md  DAVNA-PRINCIPLES.md  DESIGN_NOTES.md  ETHICS-LICENSE.md  LICENSE  LICENSE.md  PRODUCTION_README.md  PROVENANCE.md  QUICKSTART.md  README.md  SECURITY.md  VALIDATION.md  VERIFICATION_RESULTS.md  VISUAL-CIPHER.md  VISUAL_CIPHER.md  cgcs_core.py  config.yaml  deploy_all.py  deploy_ecosystem.py  deploy_enterprise.py  emoji_signal.py  example.py  invariants.py  loop_guard.py  pyproject.toml  role_spec.py  run_all.sh  setup.py  start_ecosystem.sh  stop_all.sh  stop_ecosystem.sh  validate.py
certification/: __init__.py  certification_authority.py
cgcs/: __init__.py  agent.py  consent.py  coordinator.py  fatigue.py  memory.py
community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
community/forum/categories/general/: welcome_post.md
community/forum/categories/showcase/: welcome_post.md
community/forum/categories/technical/: welcome_post.md
deployments/docker-compose/: enterprise.yml  grafana-datasources.yml  prometheus.yml
deployments/kubernetes/: linear-c-platform.yaml
docs/: ECOSYSTEM_QUICKSTART.md  ENTERPRISE_QUICKSTART.md  LINEAR_C_QUICKSTART.md  PRODUCTION_DEPLOYMENT.md
education/: README.md
education/courses/enterprise_deployment/: syllabus.md
education/courses/linear_c_basics/: syllabus.md
education/courses/robot_certification/: syllabus.md
education/courses/safety_pattern_design/: syllabus.md
examples/: demo_complete_system.py  demo_coordinated_mission.py  demo_multi_agent_swarm.py  demo_ros2_integration.py  demo_swarm_simulation.py
examples/linear_c_integration/: basic_validation.py  dashboard_monitor.py  quickstart.py  robot_with_protection.py
linear_c_platform/analytics-engine/: Dockerfile  advanced_analytics.py
linear_c_platform/control-plane/: Dockerfile  __init__.py
linear_c_platform/control-plane/dashboard/src/components/: SafetyDashboard.jsx
marketplace/: __init__.py  pattern_marketplace.py
platform/: __init__.py
platform/analytics-engine/: Dockerfile  __init__.py
platform/control-plane/: Dockerfile
platform/control-plane/api/: __init__.py  main.py
research/: README.md
scripts/: release_v1.1.sh
simulation/: __init__.py  metrics.py  swarm_simulator.py
simulation/metrics/: swarm_metrics_1768721594.json
src/: __init__.py
src/core/: __init__.py
src/core/linear_c/: __init__.py  optimized.py  patterns.py  validator.py
src/core/safety/: __init__.py  decorators.py  middleware.py
src/hardware/: __init__.py  safety_controller.py
src/monitoring/: __init__.py  dashboard.py
stack/: __init__.py  cgcs_adapter.py  fleet_manager.py  hardware_interface.py  interfaces.py  mission_planner.py  robot_agent.py  ros2_interface.py
standards/: linear_c_specification_v3.0.md
standards/working_groups/autonomous_vehicles/: charter.md
standards/working_groups/consumer_robotics/: charter.md
standards/working_groups/industrial_robotics/: charter.md
standards/working_groups/medical_robotics/: charter.md  members.md
tests/: __init__.py
tests/unit/: test_hardware_safety.py  test_linear_c_basic.py  test_optimized_validator.py  test_safety_decorators.py  test_safety_scenarios.py
tools/: provenance_hash.py  secret_seal.py
verification/: CGCS_Invariants.cfg  CGCS_Invariants.tla  PROOF_ANALYSIS.md  TLA_RUN.md  invariant_checker.py  test_invariants.py
