# CGCS AI Robotics with Linear C - Production Configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgcs-ai-robotics-linear-c"
version = "2.0.0"
description = "AI Robotics with Linear C Safety Validation - Enterprise Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "CGCS Robotics", email = "info@cgcs-robotics.ai"}
]
keywords = ["robotics", "safety", "linear-c", "validation", "ai", "enterprise", "fleet-management"]

dependencies = [
    "numpy>=1.21.0",
    "structlog>=23.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

ros2 = [
    "rclpy>=3.0.0",
]

simulation = [
    "pybullet>=3.2.0",
    "opencv-python>=4.8.0",
]

hardware = [
    # Raspberry Pi GPIO support
    "RPi.GPIO>=0.7.0; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "smbus2>=0.4.0",
]

analytics = [
    "pandas>=1.3.0",
    "plotly>=5.8.0",
    "scikit-learn>=1.0.0",
    "dash>=2.0.0",
]

enterprise = [
    # Control Plane API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    
    # Distributed State & Caching
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    
    # Authentication & Security
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
    
    # Monitoring & Metrics
    "prometheus-client>=0.19.0",
    
    # Machine Learning
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

cloud = [
    # AWS
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    
    # GCP
    "google-cloud-storage>=2.10.0",
    "google-cloud-logging>=3.5.0",
    
    # Azure
    "azure-storage-blob>=12.19.0",
]

kubernetes = [
    "kubernetes>=28.1.0",
    "pyyaml>=6.0",
]

all = [
    "cgcs-ai-robotics-linear-c[dev,ros2,simulation,hardware,analytics,enterprise,cloud,kubernetes]"
]

[project.scripts]
linear-c = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/FractalFuryan/cgcs-ai-robotics"
Documentation = "https://github.com/FractalFuryan/cgcs-ai-robotics/docs"
Repository = "https://github.com/FractalFuryan/cgcs-ai-robotics"
Issues = "https://github.com/FractalFuryan/cgcs-ai-robotics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "stack*", "verification*", "simulation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--tb=short -v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests requiring hardware",
    "ros2: marks tests requiring ROS 2",
    "simulation: marks tests requiring simulation",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py
